2008-11-25  Emmanuele Bassi  <ebassi@linux.intel.com>

	* configure.ac: Remove stray dependency on gdk-pixbuf-xlib; we
	don't use the xlib specific API anymore. (thanks to Matthias
	Clasen)

2008-11-25  Neil Roberts  <neil@linux.intel.com>

	Bug 1299 - clutter_score_remove will segmentation fault if
	timelines are more than 52 and continue to remove them

	* clutter/clutter-score.c (traverse_children): Don't destroy the
	entry in the handler for REMOVE_BY_ID. It will be removed again
	anyway in the call to g_node_traverse. This was causing a
	crash. Thanks to zhangwei for spotting.

2008-11-24  Neil Roberts  <neil@linux.intel.com>

	Add a wrapper library to help testing without NPOTs.

	* tests/tools/Makefile.am: Optionally build the
	libdisable-npots.la library depending on whether libdl was
	detected in the configure script. A helper script is also
	generated to setup the LD_PRELOAD.

	* tests/conform/Makefile.am: There are now two versions of the
	test-report and full-report rules. test-report-normal is the same
	as before and test-report-disable-npots runs the tests with the
	disable-npots wrapper script. The full-report rule runs both of
	them and displays two separate HTML files. The test-report rule
	just runs the normal version as before.

	* configure.ac: Add a test for libdl

	* tests/tools/disable-npots.sh.in: New file. Template for the
	helper script

	* tests/tools/disable-npots.c: New file

2008-11-24  Neil Roberts  <neil@linux.intel.com>

	* clutter/cogl/gl/cogl-texture.c (cogl_texture_polygon): Fix the
	equation for calculating texture coordinates when using sliced
	textures. This became broken in revision 3520.

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1270 - Update to mingw-cross-compile.sh

	* build/mingw/mingw-cross-compile.sh: Update to download latest
	binaries. Patch thanks to David Kedves.

2008-11-21  Neil Roberts  <neil@linux.intel.com>

	Bug 1271 - mingw compiling failed: undefined reference to
	`_glDrawRangeElements@24'
